# ssca-mcp-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  mcp_registry.json  pyproject.toml  server.py
scripts/: generate-local-self-signed-cert.sh  start-playground-orchestrator.sh
src/server/: __init__.py  classifier.py  config.py  logging_utils.py  registry.py  router.py  schemas.py  server.py  ssc-assistant.code-workspace
tests/: test_orchestrator.py
